<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.myrep.activity.House">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/REPSTITLE_TXT"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ziptitle_txt"
        android:id="@+id/sensearch_tv"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/zip_et_house"
        android:layout_below="@+id/sensearch_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ziphint_et"
        android:autoText="false"
        android:maxLength="5"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        android:id="@+id/zip_btn_sen"
        android:layout_below="@+id/zip_et_house"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/byname_txt"
        android:id="@+id/senatorsearch_tv"
        android:layout_below="@+id/zip_btn_sen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/state_et_house"
        android:layout_below="@+id/senatorsearch_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/namehint_et"
        android:maxLength="16"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        android:id="@+id/name_btn_sen"
        android:layout_below="@+id/state_et_house"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bystate_txt"
        android:id="@+id/textView4"
        android:layout_below="@+id/name_btn_sen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state_et_rep"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/statehint_et"
        android:maxLength="2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_btn"
        android:id="@+id/state_btn_rep"
        android:layout_below="@+id/state_et_rep"
        android:layout_alignRight="@+id/name_btn_sen"
        android:layout_alignEnd="@+id/name_btn_sen"/>
</RelativeLayout>
